--- a/src/static/index.css
+++ b/src/static/index.css
@@ -78,8 +78,8 @@
 body{
   background: var(--pureWhite);
   font-family: 'Roboto', sans-serif;
-  color: var(--textPrimary)
-
+  color: var(--textPrimary);
+  
   
   
 }
